--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "musical-demo-app-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "wavesurfer.js": "^6.4.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
